Add decoration to the links in articles

--- a/templates/shaper_helix3/less/theme.less
+++ b/templates/shaper_helix3/less/theme.less
@@ -652,6 +652,10 @@ ul.social-icons {
 article {
   &.item {
     /*margin-bottom: 50px;*/
+
+    a {
+      text-decoration: underline;
+    }
   }
 }
 
